--- a/Week-1/CattyBoard.html
+++ b/Week-1/CattyBoard.html
@@ -27,9 +27,9 @@
                 <h2> CattyBoard Top 100 Single Charts (11.06.36)</h2>
                 <h5>Unknown Artist<br>2016.Charts.100songs</h5>
                 <div class="albumButton">
-                    <i class="las la-play"></i><h6>Play all&nbsp;&nbsp;</h6>
-                    <i class="las la-plus"></i><h6>Add to&nbsp;&nbsp;</h6>
-                    <i class="las la-ellipsis-h"></i><h6>More</h6>
+                    <i class="las la-play"></i><h6>&nbsp;&nbsp;Play all&nbsp;&nbsp;&nbsp;</h6>
+                    <i class="las la-plus"></i><h6>&nbsp;&nbsp;Add to&nbsp;&nbsp;</h6>
+                    <i class="las la-ellipsis-h"></i><h6>&nbsp;&nbsp;More</h6>
 
                 </div>
             </div>
@@ -85,10 +85,9 @@
             </div>
             <div class="songButton">
                 <i class="las la-step-backward"></i>
-                <i class="las la-la-undo-alt"></i>
+                <i class="las la-undo-alt"></i>
                 <i class="las la-step-forward"></i>
                 <i class="las la-random"></i>
-                
             </div>
         </section>
     </body>
