Song play button adjusment and refactoring

--- a/Week-1/CattyBoard.html
+++ b/Week-1/CattyBoard.html
@@ -9,15 +9,18 @@
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     </head>
     <body>
+        <div class="page">
         <nav class="bar">
-            <i class="las la-bars"></i>
-            <i class="las la-home"></i>
-            <i class="las la-search"></i>
-            <i class="las la-volume-up"></i>
-            <i class="las la-user"></i>
-            <i class="las la-cog"></i>
-            <i class="las la-spotify"></i>
-            <i class="las la-soundcloud"></i>
+            
+                <i class="las la-bars"></i>
+                <i class="las la-home"></i>
+                <i class="las la-search"></i>
+                <i class="las la-volume-up"></i>
+                <i class="las la-user"></i>
+                <i class="las la-cog"></i>
+                <i class="las la-spotify"></i>
+                <i class="las la-soundcloud"></i>
+            
         </nav>
         <section class="selectedAlbum">
             <div class="albumImage">
@@ -41,7 +44,7 @@
                         <td>1. One Dance</td>
                         <td>Crake feat CatKid & Cyla</td>
                         <td>2:54</td>
-                        <td><div class="marker one">
+                        <td><div class="marker">
                             <h6>CATTY CLOUD SYNC</h6>
                         </div></td>
                     </tr>
@@ -49,7 +52,7 @@
                         <td>2. Panda </td>
                         <td>Cattee</td>
                         <td>4:06</td>
-                        <td><div class="marker one">
+                        <td><div class="marker">
                             <h6>CATTY CLOUD SYNC</h6>
                             </div>
                         </td>
@@ -59,7 +62,7 @@
                         <td>Catin Cimberlake</td>
                         <td>3:56</td>
                         <td>
-                            <div class="marker one">
+                            <div class="marker">
                                 <h6>CATTY CLOUD SYNC</h6>
                             </div>
                         </td>
@@ -68,7 +71,7 @@
                         <td>4. Work From Home</td>
                         <td>Cat Harmony feat Colta</td>
                         <td>3:34</td>
-                        <td><div class="marker one">
+                        <td><div class="marker">
                             <h6>CATTY CLOUD SYNC</h6>
                         </div></td>
                     </tr>   
@@ -76,7 +79,7 @@
                 </table>
             </div>
         </section>
-        <section class="activeSong">
+        <footer class="activeSong">
             <div class="songImage">
                 <img src="https://vif1g.csb.app/src/assets/cattyboard.jpg"/>
             </div>
@@ -85,10 +88,12 @@
             </div>
             <div class="songButton">
                 <i class="las la-step-backward"></i>
-                <i class="las la-undo-alt"></i>
+                <i class="las la-pause"></i>
                 <i class="las la-step-forward"></i>
+                <i class="las la-undo-alt"></i>
                 <i class="las la-random"></i>
             </div>
-        </section>
+        </footer>
+    </div>
     </body>
 </html>
