--- a/Week-2/part1/index.html
+++ b/Week-2/part1/index.html
@@ -20,6 +20,38 @@
                 <article class="page__article_three"><h4>Lorem ipsum dolor sit amet consectetur.</h4>Similique exercitationem amet unde libero repudiandae expedita molestiae consectetur architecto incidunt saepe ipsum placeat, quibusdam facere voluptas officia sint ea obcaecati ratione non, porro magni mollitia ab cum excepturi. Porro.</article>
                 <article class="page__article_four"><h4>Lorem ipsum, dolor sit amet consectetur.</h4> Fugiat dolores velit vitae, repellendus rem blanditiis sit mollitia a voluptatum, et tempore corrupti temporibus, quam esse nisi exercitationem. Accusantium optio, sint maiores culpa nihil suscipit expedita consequuntur unde velit.</article>
             </div>
+            <br/>
+            <hr class="bottom-line">
+            <br/>
+            <br/>
+            <div class="page__form">
+                <form methord="post" action="#">
+                    <h2>User's Data:</h2>
+                    <br/><br/>
+                    <fieldset>
+                    <article>
+                        <label>Title:&nbsp;&nbsp;</label>
+                        <input type="radio" name="title" id="Mr" vlaue="Mr">
+                        <label for="Mr">Mr.</label>
+                        <input type="radio" name="title" id="Mrs" vlaue="Mrs">
+                        <label for="Mrs">Mrs.</label>
+                        <input type="radio" name="title" id="Miss" vlaue="Miss">
+                        <label for="Miss">Mr.</label>
+                    </article>
+                        <article><label for="firstname">First Name: </label><input type="text" name="firstname" id="firstname"></article>
+                        <article><label for="lastname">Last Name: </label><input type="text" name="lastname" id="lastname"></article>
+                        <article><label for="email">Email: </label><input type="email" name="email" id="email"></article>
+                        <article><label for="phone-number">phonenumber: </label><input type="number" name="lastname" id="lastname"></article>
+                        <article><label for="password">Password: </label><input type="password" name="password" id="password"></article>
+                        <article><label for="conf_password">Confirm Password:  </label><input type="password" name="conf_password" id="conf_password"></article>
+                        <article><label for="country">Last Name: </label><input type="country" name="country" id="country"></article>
+                        <article><input type="checkbox" name="country" id="country"><label for="terms_and_conditions">  I agree to the <a href="#">terms and conditions.</a></label></article>
+                    </fieldset>
+                        <input type="button" id="button" name="signup" value="Sign up">
+                
+                </form>
+
+            </div>
         </div>
     </main>
     
