--- a/Week-2/part2/index.html
+++ b/Week-2/part2/index.html
@@ -9,10 +9,16 @@
 </head>
 <body>
     <section>
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
+        <div class="flex-group">
+            <div class="box1"></div>
+            <div class="box2"></div>
+        </div>
+        
+        <div class="flex-group">
+            <div class="box3"></div>
+            <div class="box4"></div>
+        </div>
+        
     </section>
 </body>
 </html>
